# 7zBatchCompressionScript

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
src/: app.py  archiver.py  crypto.py  dnd.py  models.py  settings.py  task.py  utils.py
src/core/: archive_service.py  compression_service.py  progress_events.py  settings_service.py
src/ui/: __init__.py  dialogs.py  main_window.py  progress_window.py  theme.py  widgets.py
src/utils/: __init__.py  filesystem.py  formats.py  parsers.py
tests/: test_archive_service.py  test_crypto.py  test_models.py  test_parsers.py
